--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,8 @@
 spring:
   application:
     name: give-me-features
+gg:
+  jte:
+    developmentMode: true
+    templateLocation: src/main/kte
+    templateSuffix: .kte
