sudo leads to gradle lock

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,6 +12,6 @@ jobs:
           distribution: 'adopt'
           cache: gradle
       - name: Install playwright dependencies
-        run: sudo ./gradlew playwrightInstallDeps
+        run: ./gradlew playwrightInstallDeps
       - name: Build with Gradle
         run: ./gradlew build
