--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,3 +15,6 @@ jobs:
         run: ./gradlew playwrightInstallDeps
       - name: Build with Gradle
         run: ./gradlew build
+      - name: Summarize tests results
+        uses: jeantessier/test-summary-action@v1
+        if: ${{ always() }}
