--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,25 +1,47 @@
 name: CI
-on: [ push, pull_request ]
+
+on:
+  push:
+    branches: [ "**" ]
+
+permissions:
+  contents: read
+  checks: write
+  pull-requests: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Set up JDK 21
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: 21
           distribution: 'adopt'
           cache: gradle
+      - name: Setup Gradle (cache)
+        uses: gradle/actions/setup-gradle@v4
       - name: Install playwright dependencies
         run: ./gradlew playwrightInstallDeps
       - name: Build with Gradle
         run: ./gradlew build
-      - name: Store reports
+      - name: Publish Unit Test Results (Checks)
+        if: always()
+        uses: dorny/test-reporter@v1
+        with:
+          name: JUnit Tests
+          path: "**/build/test-results/test/*.xml"
+          reporter: java-junit
+          fail-on-error: false
+      - name: Upload HTML Test Reports (artifact)
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: reports
+          name: test-reports-html
           path: |
-            **/build/reports/
-            **/build/test-results/
-        if: ${{ always() }}
+            **/build/reports/tests/test/**
+            build/reports/tests/test/**
+          if-no-files-found: ignore
+          retention-days: 7
